add: training configs and fix bugs

--- a/scripts/EDA_audio.ipynb
+++ b/scripts/EDA_audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sharp-membrane",
+   "id": "sound-protest",
    "metadata": {},
    "source": [
     "## Load data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "broke-hungary",
+   "id": "maritime-deployment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "persistent-warning",
+   "id": "statutory-western",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "apparent-percentage",
+   "id": "prompt-monitoring",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cross-velvet",
+   "id": "cross-dinner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "severe-brick",
+   "id": "concrete-correspondence",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "social-cosmetic",
+   "id": "ultimate-psychology",
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documented-vinyl",
+   "id": "numeric-account",
    "metadata": {},
    "source": [
     "## EDA"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "frequent-interface",
+   "id": "criminal-innocent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "grand-brooks",
+   "id": "permanent-arnold",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "characteristic-toilet",
+   "id": "sticky-facility",
    "metadata": {},
    "outputs": [
     {
@@ -7739,7 +7739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "invalid-girlfriend",
+   "id": "covered-definition",
    "metadata": {},
    "source": [
     "## Get CSVs"
@@ -7747,18 +7747,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "adult-pulse",
+   "execution_count": 20,
+   "id": "changed-advantage",
    "metadata": {},
    "outputs": [],
    "source": [
-    "classes_filter = ['happy', 'neutral', 'angry']"
+    "classes_filter = ['happy', 'neutral', 'angry']\n",
+    "classes_mapping = {'happy': 0, 'neutral': 1, 'angry': 2}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "vanilla-competition",
+   "execution_count": 23,
+   "id": "smaller-aspect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7770,7 +7771,7 @@
     "        audio_id = audio_name[:-4]\n",
     "        label = labels[audio_id]\n",
     "        if label in classes_filter:\n",
-    "            row_list.append([audio_id, label])\n",
+    "            row_list.append([audio_id, classes_mapping[label]])\n",
     "            \n",
     "    with open(csv_path, 'w', newline='') as f:\n",
     "        writer = csv.writer(f, delimiter=',')\n",
@@ -7779,15 +7780,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "interesting-model",
+   "execution_count": 24,
+   "id": "technological-killing",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 773/773 [00:00<00:00, 414232.40it/s]\n"
+      "100%|██████████| 773/773 [00:00<00:00, 365565.11it/s]\n"
      ]
     }
    ],
@@ -7797,15 +7798,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "essential-knock",
+   "execution_count": 25,
+   "id": "interim-overhead",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 383/383 [00:00<00:00, 940526.01it/s]\n"
+      "100%|██████████| 383/383 [00:00<00:00, 634948.00it/s]\n"
      ]
     }
    ],
@@ -7816,7 +7817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rubber-pepper",
+   "id": "roman-welcome",
    "metadata": {},
    "outputs": [],
    "source": []
