finish: audio training baseline

--- a/train_notebook.ipynb
+++ b/train_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "supported-personality",
+   "id": "least-distance",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "quantitative-aircraft",
+   "id": "finnish-jesus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "extra-ladder",
+   "execution_count": 3,
+   "id": "atlantic-technical",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,122 @@
       "Loss: 1.0845879767542688\n",
       "Accuracy: 0.37704917788505554\n",
       "Evaluating........\n",
-      " 69%|█████████████████████████████▌             | 33/48 [00:47<00:22,  1.51s/it]"
+      "100%|███████████████████████████████████████████| 48/48 [01:07<00:00,  1.41s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.0609801126023135\n",
+      "Accuracy: 0.44736844301223755\n",
+      "-----------------------------------\n",
+      "Loss is improved from  inf to  1.060980. Saving weights...\n",
+      "Accuracy is improved from  0.000000 to  0.447368. Saving weights...\n",
+      "\n",
+      "Epoch   1\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 107/107 [02:53<00:00,  1.62s/it]\n",
+      "+ Training result\n",
+      "Loss: 0.9761291658766917\n",
+      "Accuracy: 0.5597189664840698\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:13<00:00,  1.53s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.0383809233705197\n",
+      "Accuracy: 0.4526315927505493\n",
+      "-----------------------------------\n",
+      "Loss is improved from  1.060980 to  1.038381. Saving weights...\n",
+      "Accuracy is improved from  0.447368 to  0.452632. Saving weights...\n",
+      "\n",
+      "Epoch   2\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 107/107 [03:20<00:00,  1.87s/it]\n",
+      "+ Training result\n",
+      "Loss: 0.8871536767371349\n",
+      "Accuracy: 0.6229507923126221\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:11<00:00,  1.50s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 0.9985883856813114\n",
+      "Accuracy: 0.5210526585578918\n",
+      "-----------------------------------\n",
+      "Loss is improved from  1.038381 to  0.998588. Saving weights...\n",
+      "Accuracy is improved from  0.452632 to  0.521053. Saving weights...\n",
+      "\n",
+      "Epoch   3\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "100%|█████████████████████████████████████████| 107/107 [03:05<00:00,  1.74s/it]\n",
+      "+ Training result\n",
+      "Loss: 0.7233187358513055\n",
+      "Accuracy: 0.7283372282981873\n",
+      "Evaluating........\n",
+      "100%|███████████████████████████████████████████| 48/48 [01:12<00:00,  1.50s/it]\n",
+      "+ Evaluation result\n",
+      "Loss: 1.0957319748898346\n",
+      "Accuracy: 0.46315792202949524\n",
+      "-----------------------------------\n",
+      "Loss is not improved from 0.998588.\n",
+      "Accuracy is not improved from 0.521053.\n",
+      "\n",
+      "Epoch   4\n",
+      "-----------------------------------\n",
+      "Training........\n",
+      "  4%|█▌                                         | 4/107 [00:08<03:18,  1.93s/it]^C\n",
+      "  4%|█▌                                         | 4/107 [00:08<03:40,  2.14s/it]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 146, in load\n",
+      "    with sf.SoundFile(path) as sf_desc:\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 629, in __init__\n",
+      "    self._file = self._open(file, mode_int, closefd)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 1184, in _open\n",
+      "    \"Error opening {0!r}: \".format(self.name))\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/soundfile.py\", line 1357, in _error_check\n",
+      "    raise RuntimeError(prefix + _ffi.string(err_str).decode('utf-8', 'replace'))\n",
+      "RuntimeError: Error opening 'data/AFEW/raw-audios/train/001414094.mp3': File contains data in an unknown format.\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"train.py\", line 120, in <module>\n",
+      "    train(config)\n",
+      "  File \"train.py\", line 93, in train\n",
+      "    val_dataloader=val_dataloader)\n",
+      "  File \"./libs/workers/trainer.py\", line 178, in train\n",
+      "    self.train_epoch(epoch=epoch, dataloader=train_dataloader)\n",
+      "  File \"./libs/workers/trainer.py\", line 87, in train_epoch\n",
+      "    for i, (inp, lbl) in enumerate(progress_bar):\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/tqdm/std.py\", line 1170, in __iter__\n",
+      "    for obj in iterable:\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 435, in __next__\n",
+      "    data = self._next_data()\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/dataloader.py\", line 475, in _next_data\n",
+      "    data = self._dataset_fetcher.fetch(index)  # may raise StopIteration\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/_utils/fetch.py\", line 44, in fetch\n",
+      "    data = [self.dataset[idx] for idx in possibly_batched_index]\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/torch/utils/data/_utils/fetch.py\", line 44, in <listcomp>\n",
+      "    data = [self.dataset[idx] for idx in possibly_batched_index]\n",
+      "  File \"./libs/datasets/audio.py\", line 66, in __getitem__\n",
+      "    y = self.get_audio(audio_path_w_format)\n",
+      "  File \"./libs/datasets/audio.py\", line 25, in get_audio\n",
+      "    y, _ = lb.load(audio_path, sr=self.sr, duration=self.duration, offset=offset)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 163, in load\n",
+      "    y, sr_native = __audioread_load(path, offset, duration, dtype)\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/librosa/core/audio.py\", line 187, in __audioread_load\n",
+      "    with audioread.audio_open(path) as input_file:\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/audioread/__init__.py\", line 107, in audio_open\n",
+      "    backends = available_backends()\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/audioread/__init__.py\", line 71, in available_backends\n",
+      "    if _ca_available():\n",
+      "  File \"/home/kvu/erc/venv/lib/python3.6/site-packages/audioread/__init__.py\", line 49, in _ca_available\n",
+      "    lib = ctypes.util.find_library('AudioToolbox')\n",
+      "  File \"/usr/lib/python3.6/ctypes/util.py\", line 314, in find_library\n",
+      "    _get_soname(_findLib_gcc(name) or _findLib_ld(name))\n",
+      "  File \"/usr/lib/python3.6/ctypes/util.py\", line 302, in _findLib_ld\n",
+      "    universal_newlines=True)\n",
+      "  File \"/usr/lib/python3.6/subprocess.py\", line 729, in __init__\n",
+      "    restore_signals, start_new_session)\n",
+      "  File \"/usr/lib/python3.6/subprocess.py\", line 1295, in _execute_child\n",
+      "    restore_signals, start_new_session, preexec_fn)\n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
@@ -122,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sitting-petite",
+   "id": "developed-fairy",
    "metadata": {},
    "outputs": [],
    "source": []
